// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`xlf rendering handles markdown with liquid conditionals 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?>
<xliff xmlns=\\"urn:oasis:names:tc:xliff:document:1.2\\" version=\\"1.2\\">
  <file original=\\"text.md\\" source-language=\\"en-US\\" target-language=\\"ru-RU\\" datatype=\\"markdown\\">
    <header>
      <skeleton>
        <external-file href=\\"text.skl.md\\"></external-file>
      </skeleton>
    </header>
    <body>
      <trans-unit id=\\"1\\">
        <source>Document Title</source>
      </trans-unit>
      <trans-unit id=\\"2\\">
        <source>Download the app from the</source>
      </trans-unit>
      <trans-unit id=\\"3\\">
        <source>{{ ios-marketplace }} Store</source>
      </trans-unit>
      <trans-unit id=\\"4\\">
        <source>.</source>
      </trans-unit>
      <trans-unit id=\\"5\\">
        <source>Download the app from</source>
      </trans-unit>
      <trans-unit id=\\"6\\">
        <source>{{ other-marketplace }} Store</source>
      </trans-unit>
      <trans-unit id=\\"7\\">
        <source>.</source>
      </trans-unit>
      <trans-unit id=\\"8\\">
        <source>Some text</source>
      </trans-unit>
      <trans-unit id=\\"9\\">
        <source>Apple</source>
      </trans-unit>
      <trans-unit id=\\"10\\">
        <source>Android</source>
      </trans-unit>
      <trans-unit id=\\"11\\">
        <source>text continued.</source>
      </trans-unit>
    </body>
  </file>
</xliff>
"
`;

exports[`xlf rendering handles markdown with liquid variables 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?>
<xliff xmlns=\\"urn:oasis:names:tc:xliff:document:1.2\\" version=\\"1.2\\">
  <file original=\\"text.md\\" source-language=\\"en-US\\" target-language=\\"ru-RU\\" datatype=\\"markdown\\">
    <header>
      <skeleton>
        <external-file href=\\"text.skl.md\\"></external-file>
      </skeleton>
    </header>
    <body>
      <trans-unit id=\\"1\\">
        <source>{{ service-name }} Service</source>
      </trans-unit>
      <trans-unit id=\\"2\\">
        <source>Try out {{ service-name }} and let us know what you think</source>
      </trans-unit>
      <trans-unit id=\\"3\\">
        <source>Also check out</source>
      </trans-unit>
      <trans-unit id=\\"4\\">
        <source>{{ other-service-name }}</source>
      </trans-unit>
      <trans-unit id=\\"5\\">
        <source>{{ other-service-name }} description</source>
      </trans-unit>
      <trans-unit id=\\"6\\">
        <source>{{ service-name }} usage screenshot</source>
      </trans-unit>
      <trans-unit id=\\"7\\">
        <source>{{ service-name }} in action</source>
      </trans-unit>
    </body>
  </file>
</xliff>
"
`;

exports[`xlf rendering renders empty xlf document for empty markdown 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?>
<xliff xmlns=\\"urn:oasis:names:tc:xliff:document:1.2\\" version=\\"1.2\\">
  <file original=\\"file.md\\" source-language=\\"ru-RU\\" target-language=\\"en-US\\" datatype=\\"markdown\\">
    <header>
      <skeleton>
        <external-file href=\\"file.skl.md\\"></external-file>
      </skeleton>
    </header>
    <body>
    </body>
  </file>
</xliff>
"
`;

exports[`xlf rendering renders trans-units from text tokens 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?>
<xliff xmlns=\\"urn:oasis:names:tc:xliff:document:1.2\\" version=\\"1.2\\">
  <file original=\\"text.md\\" source-language=\\"ru-RU\\" target-language=\\"en-US\\" datatype=\\"markdown\\">
    <header>
      <skeleton>
        <external-file href=\\"text.skl.md\\"></external-file>
      </skeleton>
    </header>
    <body>
      <trans-unit id=\\"1\\">
        <source>Заголовок 1</source>
      </trans-unit>
      <trans-unit id=\\"2\\">
        <source>Параграф</source>
      </trans-unit>
      <trans-unit id=\\"3\\">
        <source>Первый элемент списка</source>
      </trans-unit>
      <trans-unit id=\\"4\\">
        <source>Второй элемент списка</source>
      </trans-unit>
      <trans-unit id=\\"5\\">
        <source>Заголовок 2</source>
      </trans-unit>
      <trans-unit id=\\"6\\">
        <source>Параграф содержащий</source>
      </trans-unit>
      <trans-unit id=\\"7\\">
        <source>жирный текст</source>
      </trans-unit>
      <trans-unit id=\\"8\\">
        <source>и</source>
      </trans-unit>
      <trans-unit id=\\"9\\">
        <source>курсив</source>
      </trans-unit>
      <trans-unit id=\\"10\\">
        <source>А ещё ключевые особенности структуры проекта освещают чрезвычайно интересные особенности картины в целом.</source>
      </trans-unit>
      <trans-unit id=\\"11\\">
        <source>Предложения складываются в абзацы — и вы наслаждетесь очередным бредошедевром.</source>
      </trans-unit>
      <trans-unit id=\\"12\\">
        <source>текст внутри цитаты</source>
      </trans-unit>
      <trans-unit id=\\"13\\">
        <source>Первый элемент нумерованного списка</source>
      </trans-unit>
      <trans-unit id=\\"14\\">
        <source>Второй элемент нумерованного списка</source>
      </trans-unit>
      <trans-unit id=\\"15\\">
        <source>Текст ссылки.</source>
      </trans-unit>
      <trans-unit id=\\"16\\">
        <source>Всё ещё текст ссылки.</source>
      </trans-unit>
      <trans-unit id=\\"17\\">
        <source>Описание ссылки.</source>
      </trans-unit>
      <trans-unit id=\\"18\\">
        <source>Всё ещё описание ссылки.</source>
      </trans-unit>
      <trans-unit id=\\"19\\">
        <source>Альтернативный текст картинки.</source>
      </trans-unit>
      <trans-unit id=\\"20\\">
        <source>Всё ещё альт. текст картинки.</source>
      </trans-unit>
      <trans-unit id=\\"21\\">
        <source>Титул картинки.</source>
      </trans-unit>
      <trans-unit id=\\"22\\">
        <source>Всё ещё титул картинки.</source>
      </trans-unit>
    </body>
  </file>
</xliff>
"
`;
